--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "format:staged": "lint-staged",
         "lint": "eslint --cache .",
         "prepare": "husky || true",
+        "build": "tsc",
         "profiling": "cross-env NODE_ENV=production tsx --prof lib/index.ts",
         "start": "cross-env NODE_ENV=production node dist/index.js",
         "test": "npm run format:check && npm run vitest:coverage",
