--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "bundler",
-        "strict": true,
-        "jsx": "react-jsx",
-        "jsxImportSource": "hono/jsx",
-        "paths": {
-            "@/*": ["./lib/*"]
-        },
-        "esModuleInterop": true,
-        "noImplicitAny": false,
-        "outDir": "./dist",
-        "skipLibCheck": true,
-        "incremental": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
+    "paths": {
+      "@/*": ["./lib/*"]
     },
-    "include": ["./lib/**/*", "./api/vercel.ts"],
-    "exclude": ["node_modules", "*.test.*"]
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "outDir": "./dist",
+    "skipLibCheck": true,
+    "noEmit": false,             ← 🟢 ВАЖЛИВО!
+    "incremental": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "include": ["./lib/**/*", "./api/vercel.ts"],
+  "exclude": ["node_modules", "*.test.*"]
 }
