--- a/package.json
+++ b/package.json
@@ -1,34 +1,19 @@
 {
   "name": "rsshub",
   "version": "1.0.0",
-  "description": "Make RSS Great Again!",
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "build": "tsc",                        
+    "start": "node dist/index.js",          
     "dev": "tsx watch lib/index.ts"
   },
+  "main": "dist/index.js",                 
   "type": "module",
-  "keywords": ["RSS"],
-  "homepage": "https://github.com/DIYgod/RSSHub#readme",
-  "bugs": {
-    "url": "https://github.com/DIYgod/RSSHub/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DIYgod/RSSHub.git"
-  },
-  "license": "MIT",
-  "author": "DIYgod",
-  "files": ["lib"],
   "dependencies": {
-    "cross-env": "7.0.3",
-    "tsx": "4.20.3"
+    "cheerio": "^1.0.0-rc.12",
+    "got": "^14.0.0"
   },
   "devDependencies": {
-    "typescript": "5.8.3"
-  },
-  "engines": {
-    "node": ">=22"
+    "typescript": "^5.0.0",
+    "tsx": "^4.0.0"
   }
 }
